; ModuleID = '/home/carl/AnghaBench/lab/engine/code/client/extr_cl_ui.c_CL_GetClipboardData.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/client/extr_cl_ui.c_CL_GetClipboardData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @CL_GetClipboardData to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CL_GetClipboardData(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i8* (...) @Sys_GetClipboardData()
  store i8* %6, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %2
  %10 = load i8*, i8** %3, align 8
  store i8 0, i8* %10, align 1
  br label %18

11:                                               ; preds = %2
  %12 = load i8*, i8** %3, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @Q_strncpyz(i8* %12, i8* %13, i32 %14)
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @Z_Free(i8* %16)
  br label %18

18:                                               ; preds = %11, %9
  ret void
}

declare dso_local i8* @Sys_GetClipboardData(...) #1

declare dso_local i32 @Q_strncpyz(i8*, i8*, i32) #1

declare dso_local i32 @Z_Free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
